# codex-quota-linux

./: .gitignore  LICENSE  README.md  codex-quota  config.example.toml  pyproject.toml
codex_quota/: __init__.py  accounts.py  activation.py  app.py  auth_info.py  auth_store.py  auth_sync.py  cli.py  client.py  config.py  indicator.py  legacy.py  notifications.py  quota.py  reset_credits.py  switcher.py
tests/: test_accounts.py  test_activation.py  test_app.py  test_auth_store.py  test_auth_sync.py  test_cli.py  test_client.py  test_config.py  test_indicator.py  test_legacy.py  test_notifications.py  test_quota.py  test_reset_credits.py  test_switcher.py
